[gd_scene load_steps=52 format=3 uid="uid://qhe00d1dk7d3"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_1jxqe"]
[ext_resource type="Texture2D" uid="uid://dfldir2xtkh7l" path="res://image/player.png" id="2_jihsy"]
[ext_resource type="Texture2D" uid="uid://chrxed7kumd0f" path="res://image/last_stand_player.png" id="3_rmn6a"]
[ext_resource type="Texture2D" uid="uid://cxmaj4v56cnbt" path="res://image/shooting_down.png" id="4_avuki"]
[ext_resource type="Script" path="res://scripts/PlayerHurtbox.gd" id="4_t8vqb"]
[ext_resource type="Texture2D" uid="uid://cvu80oj8bs0bc" path="res://image/last_stand_shooting_down.png" id="5_qhwpb"]
[ext_resource type="Script" path="res://scripts/Gun.gd" id="5_xoien"]
[ext_resource type="Texture2D" uid="uid://cmj1lv7mod5ei" path="res://image/player_right_left.png" id="6_top04"]
[ext_resource type="Texture2D" uid="uid://fyk648irlxt5" path="res://image/last_stand_right_left.png" id="7_0sdpr"]
[ext_resource type="Texture2D" uid="uid://cyb058b0e16u" path="res://image/shooting_up.png" id="8_t64kj"]
[ext_resource type="Texture2D" uid="uid://cvfr5ealun3uk" path="res://image/last_stand_shooting_up.png" id="9_c1p7x"]
[ext_resource type="Texture2D" uid="uid://ctue84yvxs4l2" path="res://image/last_stand.png" id="12_7ptu7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_atmel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jihsy")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rmn6a")
}],
"loop": true,
"name": &"IdleLS",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_avuki")
}],
"loop": true,
"name": &"ShootDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_qhwpb")
}],
"loop": true,
"name": &"ShootDownLS",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_top04")
}],
"loop": true,
"name": &"ShootSide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_0sdpr")
}],
"loop": true,
"name": &"ShootSideLS",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_t64kj")
}],
"loop": true,
"name": &"ShootUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_c1p7x")
}],
"loop": true,
"name": &"ShootUpLS",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sf0vn"]
radius = 6.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ta2u3"]
radius = 7.0
height = 28.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fw0yk"]
atlas = ExtResource("12_7ptu7")
region = Rect2(0, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_iudrm"]
atlas = ExtResource("12_7ptu7")
region = Rect2(41, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr3nu"]
atlas = ExtResource("12_7ptu7")
region = Rect2(82, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i1te"]
atlas = ExtResource("12_7ptu7")
region = Rect2(123, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_51v2c"]
atlas = ExtResource("12_7ptu7")
region = Rect2(164, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbuw2"]
atlas = ExtResource("12_7ptu7")
region = Rect2(205, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ufgy"]
atlas = ExtResource("12_7ptu7")
region = Rect2(246, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmhww"]
atlas = ExtResource("12_7ptu7")
region = Rect2(287, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ane1t"]
atlas = ExtResource("12_7ptu7")
region = Rect2(328, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p6w1"]
atlas = ExtResource("12_7ptu7")
region = Rect2(369, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfq6y"]
atlas = ExtResource("12_7ptu7")
region = Rect2(410, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp5i7"]
atlas = ExtResource("12_7ptu7")
region = Rect2(451, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qfgw"]
atlas = ExtResource("12_7ptu7")
region = Rect2(492, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbk7j"]
atlas = ExtResource("12_7ptu7")
region = Rect2(533, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqn88"]
atlas = ExtResource("12_7ptu7")
region = Rect2(574, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kilq"]
atlas = ExtResource("12_7ptu7")
region = Rect2(615, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwv0t"]
atlas = ExtResource("12_7ptu7")
region = Rect2(656, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_epgbe"]
atlas = ExtResource("12_7ptu7")
region = Rect2(697, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph6mh"]
atlas = ExtResource("12_7ptu7")
region = Rect2(738, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd2ra"]
atlas = ExtResource("12_7ptu7")
region = Rect2(779, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_do0ui"]
atlas = ExtResource("12_7ptu7")
region = Rect2(820, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eoig"]
atlas = ExtResource("12_7ptu7")
region = Rect2(861, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38g5"]
atlas = ExtResource("12_7ptu7")
region = Rect2(902, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2pm8"]
atlas = ExtResource("12_7ptu7")
region = Rect2(943, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vr4x"]
atlas = ExtResource("12_7ptu7")
region = Rect2(984, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ci4j"]
atlas = ExtResource("12_7ptu7")
region = Rect2(1025, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_80bwf"]
atlas = ExtResource("12_7ptu7")
region = Rect2(1066, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnxlp"]
atlas = ExtResource("12_7ptu7")
region = Rect2(1107, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5pv3"]
atlas = ExtResource("12_7ptu7")
region = Rect2(1148, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_janhv"]
atlas = ExtResource("12_7ptu7")
region = Rect2(1189, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_t24tm"]
atlas = ExtResource("12_7ptu7")
region = Rect2(1230, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5iwnk"]
atlas = ExtResource("12_7ptu7")
region = Rect2(1271, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fdo6"]
atlas = ExtResource("12_7ptu7")
region = Rect2(1312, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wi2w"]
atlas = ExtResource("12_7ptu7")
region = Rect2(1353, 0, 41, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ukom"]
atlas = ExtResource("12_7ptu7")
region = Rect2(1394, 0, 41, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ecxch"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw0yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iudrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr3nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i1te")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51v2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbuw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ufgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmhww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ane1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p6w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfq6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp5i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qfgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbk7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqn88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kilq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwv0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epgbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph6mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd2ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do0ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eoig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38g5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2pm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vr4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ci4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80bwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnxlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5pv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_janhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t24tm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5iwnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fdo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wi2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ukom")
}],
"loop": false,
"name": &"LastStand",
"speed": 7.0
}]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 0
collision_mask = 65
script = ExtResource("1_1jxqe")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_atmel")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CapsuleShape2D_sf0vn")

[node name="DropThroughTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="LastStandTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 48
script = ExtResource("4_t8vqb")

[node name="HurtboxCollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
unique_name_in_owner = true
shape = SubResource("CapsuleShape2D_ta2u3")
debug_color = Color(0, 0.6, 0, 0.419608)

[node name="HitInvulnerabilityTimer" type="Timer" parent="Hurtbox"]
unique_name_in_owner = true
one_shot = true

[node name="BlinkTimer" type="Timer" parent="Hurtbox"]
unique_name_in_owner = true
wait_time = 0.05

[node name="Gun" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_xoien")

[node name="GunMuzzle" type="Marker2D" parent="Gun"]
unique_name_in_owner = true
position = Vector2(6, 0)

[node name="GunDelayTimer" type="Timer" parent="Gun"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="LastStandIndicator" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -25)
sprite_frames = SubResource("SpriteFrames_ecxch")
animation = &"LastStand"
